drivers: serial: nrf_sw_lpuart: remove CONFIG_NRF_SW_LPUART_INT_DRIVEN
There's a standard option to enable interrupt-driven UART:
CONFIG_UART_INTERRUPT_DRIVEN, there's no need to create a wrapper
option. In fact, the option has to be enabled as well.

Signed-off-by: Gerard Marull-Paretas <gerard.marull@nordicsemi.no>

--- a/drivers/serial/Kconfig
+++ b/drivers/serial/Kconfig
@@ -46,16 +46,10 @@ config NRF_SW_LPUART_DEFAULT_TX_TIMEOUT
 	  Timeout is used in uart_poll_out and uart_fifo_fill (if interrupt
 	  driven API is enabled).
 
-config NRF_SW_LPUART_INT_DRIVEN
-	bool "Enable interrupt driven API"
-	select UART_INTERRUPT_DRIVEN
-	help
-	  If enabled, then asynchronous API cannot be used
-
 config NRF_SW_LPUART_INT_DRV_TX_BUF_SIZE
 	int "Tx buffer size"
 	default 128
-	depends on NRF_SW_LPUART_INT_DRIVEN
+	depends on UART_INTERRUPT_DRIVEN
 	help
 	  Internal buffer of that size is created and used by uart_fifo_fill.
 	  For optimal performance it should be able to fit the longest possible
