drivers: serial: nrf_sw_lpuart: use gpio-dt-spec
Move rdy/req-pin properties to rdy/req-gpios so we have port/pin cells.
Thanks to this change, we can also use gpio-dt-spec facilities. Note
that the driver can likely be improved further, but changes here are
minimum to make things work as they did before.

Signed-off-by: Gerard Marull-Paretas <gerard.marull@nordicsemi.no>

--- a/dts/bindings/serial/nordic,nrf-sw-lpuart.yaml
+++ b/dts/bindings/serial/nordic,nrf-sw-lpuart.yaml
@@ -9,12 +9,12 @@ compatible: "nordic,nrf-sw-lpuart"
 include: uart-device.yaml
 
 properties:
-  req-pin:
-    type: int
+  req-gpios:
+    type: phandle-array
     description: Request pin
     required: true
 
-  rdy-pin:
-    type: int
+  rdy-gpios:
+    type: phandle-array
     description: Ready pin
     required: true
