--- a/west.yml
+++ b/west.yml
@@ -101,7 +101,7 @@ manifest:
     # changes.
     - name: sdk-hostap
       path: modules/lib/hostap
-      revision: 3dabc364cb4e4e7f3513889431737b02ee0111e0
+      revision: pull/11/head
     - name: mcuboot
       repo-path: sdk-mcuboot
       revision: 6097de22bd1f1b499e599bfef618a235de7073b2
