sample: lwm2m_carrier: Add shell
Enable CONFIG_SHELL and CONFIG_AT_SHELL for the sample.

AT shell is useful to debug modem and credentials.
LTE_LC is enabled by default, which is useful to control
the lte link from application and test lib_lwm2m_carrier
behavior from lte link status change.

Signed-off-by: Jun Qing Zou <jun.qing.zou@nordicsemi.no>

--- a/samples/nrf9160/lwm2m_carrier/prj.conf
+++ b/samples/nrf9160/lwm2m_carrier/prj.conf
@@ -65,3 +65,11 @@ CONFIG_SPM=y
 
 # Default partition for NVS is unused
 CONFIG_PM_PARTITION_SIZE_NVS_STORAGE=0
+
+# Shell
+CONFIG_SHELL=y
+CONFIG_SHELL_WILDCARD=n
+
+# AT command shell
+CONFIG_AT_SHELL=y
+CONFIG_AT_SHELL_CMD_RESPONSE_MAX_LEN=2048
