Implement sample assignments, add time client

--- a/samples/bluetooth/mesh/Time_Client/prj.conf
+++ b/samples/bluetooth/mesh/Time_Client/prj.conf
@@ -1,9 +1,12 @@
 #
-# Copyright (c) 2019 Nordic Semiconductor ASA
+# Copyright (c) 2022 Nordic Semiconductor ASA
 #
 # SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 #
+
 CONFIG_NCS_SAMPLES_DEFAULTS=y
+
+
 
 # General configuration
 CONFIG_MAIN_STACK_SIZE=4096
@@ -18,14 +21,17 @@ CONFIG_PARTITION_MANAGER_ENABLED=y
 CONFIG_PM_SINGLE_IMAGE=y
 CONFIG_PM_PARTITION_SIZE_SETTINGS_STORAGE=0x8000
 
+
 # Bluetooth configuration
 CONFIG_BT=y
 CONFIG_BT_COMPANY_ID=0x0059
-CONFIG_BT_DEVICE_NAME="Mesh Light Switch"
+CONFIG_BT_DEVICE_NAME="Time Client"
 CONFIG_BT_L2CAP_TX_BUF_COUNT=32
 CONFIG_BT_OBSERVER=y
 CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_SETTINGS=y
+
+
 
 # Disable unused Bluetooth features
 CONFIG_BT_CTLR_DUP_FILTER_LEN=0
@@ -47,20 +53,18 @@ CONFIG_BT_MESH_GATT_PROXY=y
 CONFIG_BT_MESH_PROXY_USE_DEVICE_NAME=y
 CONFIG_BT_MESH_DK_PROV=y
 
+
 # Bluetooth mesh models
-CONFIG_BT_MESH_ONOFF_CLI=y
+CONFIG_BT_MESH_TIME_CLI=y
 
-# Added debug logging configuration
-CONFIG_BT_DEBUG_LOG=y
-CONFIG_BT_MESH_DEBUG=y
-CONFIG_BT_MESH_DEBUG_ACCESS=y
 
-#Added more debug
-CONFIG_BT_MESH_DEBUG_NET=y
-CONFIG_BT_MESH_DEBUG_PROVISIONER=y
-
+# Bluetooth mesh shell support
 CONFIG_BT_MESH_SHELL=y
 CONFIG_BT_MESH_SHELL_TIME_CLI=y
 
-CONFIG_BT_MESH_ONOFF_CLI=y
+# Debug configuration
 
+# CONFIG_BT_DEBUG_LOG=y
+# CONFIG_BT_MESH_DEBUG=y
+# CONFIG_BT_MESH_DEBUG_ACCESS=y
+# CONFIG_BT_MESH_DEBUG_MODEL=y
