--- a/samples/bluetooth/mesh/light_ctrl/prj.conf
+++ b/samples/bluetooth/mesh/light_ctrl/prj.conf
@@ -52,3 +52,14 @@ CONFIG_BT_MESH_LIGHT_CTRL_SRV=y
 CONFIG_BT_MESH_LIGHT_CTRL_SRV_TIME_ON=3
 CONFIG_BT_MESH_LIGHT_CTRL_SRV_TIME_PROLONG=3
 CONFIG_BT_MESH_LIGHT_CTRL_SRV_RESUME_DELAY=30
+CONFIG_BT_MESH_TIME_SRV=y
+
+# Shell commands
+#CONFIG_BT_MESH_SHELL=y
+
+# Debug
+# CONFIG_BT_DEBUG_LOG=y
+# CONFIG_BT_MESH_DEBUG=y
+# CONFIG_BT_MESH_DEBUG_ACCESS=y
+# CONFIG_BT_MESH_DEBUG_MODEL=y
+
