--- a/samples/bluetooth/mesh/gen_onoff_playground/prj.conf
+++ b/samples/bluetooth/mesh/gen_onoff_playground/prj.conf
@@ -21,7 +21,7 @@ CONFIG_PM_PARTITION_SIZE_SETTINGS_STORAGE=0x8000
 # Bluetooth configuration
 CONFIG_BT=y
 CONFIG_BT_COMPANY_ID=0x0059
-CONFIG_BT_DEVICE_NAME="Mesh Light Switch"
+CONFIG_BT_DEVICE_NAME="Generic OnOff Playground"
 CONFIG_BT_L2CAP_TX_BUF_COUNT=32
 CONFIG_BT_OBSERVER=y
 CONFIG_BT_PERIPHERAL=y
@@ -49,18 +49,4 @@ CONFIG_BT_MESH_DK_PROV=y
 
 # Bluetooth mesh models
 CONFIG_BT_MESH_ONOFF_CLI=y
-
-# Added debug logging configuration
-CONFIG_BT_DEBUG_LOG=y
-CONFIG_BT_MESH_DEBUG=y
-CONFIG_BT_MESH_DEBUG_ACCESS=y
-
-#Added more debug
-CONFIG_BT_MESH_DEBUG_NET=y
-CONFIG_BT_MESH_DEBUG_PROVISIONER=y
-
-CONFIG_BT_MESH_SHELL=y
-CONFIG_BT_MESH_SHELL_TIME_CLI=y
-
-CONFIG_BT_MESH_ONOFF_CLI=y
-
+CONFIG_BT_MESH_ONOFF_SRV=y
