--- a/west.yml
+++ b/west.yml
@@ -112,7 +112,7 @@ manifest:
     - name: nrfxlib
       repo-path: sdk-nrfxlib
       path: nrfxlib
-      revision: c3c9b6bb1d73abed1a775ec0dca4e29d3ccc301e
+      revision: pull/792/head
     - name: trusted-firmware-m
       repo-path: sdk-trusted-firmware-m
       path: modules/tee/tf-m/trusted-firmware-m
@@ -132,10 +132,7 @@ manifest:
           path: third_party/nlassert/repo
         - name: pigweed
           path: third_party/pigweed/repo
-    - name: nrf-802154
-      repo-path: sdk-nrf-802154
-      path: nrf-802154
-      revision: e658759beb67c8060664ecca9d2f79ac5ff8e8f7
+    - }2d46a6557f124de02266e3d58813095cf7f85b
       groups:
       - nrf-802154
     - name: cjson
