--- a/west.yml
+++ b/west.yml
@@ -50,7 +50,7 @@ manifest:
     # https://developer.nordicsemi.com/nRF_Connect_SDK/doc/latest/zephyr/guides/modules.html
     - name: zephyr
       repo-path: sdk-zephyr
-      revision: 482dcc7865f7d3a458f061a1d8276c5801eed1e4
+      revision: pull/869/head
       import:
         # In addition to the zephyr repository itself, NCS also
         # imports the contents of zephyr/west.yml at the above
@@ -104,7 +104,7 @@ manifest:
       revision: 3dabc364cb4e4e7f3513889431737b02ee0111e0
     - name: mcuboot
       repo-path: sdk-mcuboot
-      revision: 6097de22bd1f1b499e599bfef618a235de7073b2
+      revision: pull/209/head
       path: bootloader/mcuboot
     - name: mbedtls-nrf
       path: mbedtls
