--- a/drivers/mpsl/temp_nrf5/CMakeLists.txt
+++ b/drivers/mpsl/temp_nrf5/CMakeLists.txt
@@ -8,6 +8,6 @@ zephyr_library()
 
 zephyr_library_sources_ifdef(CONFIG_TEMP_NRF5_MPSL temp_nrf5_mpsl.c)
 
-if(CONFIG_TEMP_NRF5 AND CONFIG_TEMP_NRF5_MPSL)
-  message(FATAL_ERROR "CONFIG_TEMP_NRF5 and CONFIG_TEMP_NRF5_MPSL have both been enabled, but must not be used together.")
+if(CONFIG_TEMP_NRF5_MPSL AND NOT CONFIG_TEMP_NRF5_FORCE_ALT)
+  message(FATAL_ERROR "CONFIG_TEMP_NRF5_MPSL and CONFIG_TEMP_NRF5_FORCE_ALT must both be enabled.")
 endif()
