--- a/samples/nrf9160/nrf_cloud_rest_device_message_tol2/prj.conf
+++ b/samples/nrf9160/nrf_cloud_rest_device_message_tol2/prj.conf
@@ -13,8 +13,8 @@ CONFIG_NET_SOCKETS=y
 CONFIG_NET_SOCKETS_POSIX_NAMES=y
 CONFIG_NET_NATIVE=n
 
-# Button/LED support
-CONFIG_DK_LIBRARY=y
+# Date time library
+CONFIG_DATE_TIME=y
 
 # Modem/LTE Link
 CONFIG_NRF_MODEM_LIB_SYS_INIT=y
